# CPG-ROC-LocoManipulation

./: README.md
controllers/db_alpha/walking_neural_control/: AMC.cpp  AMC.h  dbModularController.cpp  dbModularController.h  dbMotorDefinition.h  db_pcpg.cpp  db_pcpg.h  db_pcpg_o.cpp  db_pcpg_o.h  dualIntegralLearner.cpp  dualIntegralLearner.h  postProcessing.cpp  postProcessing.h  quaternionToEuler.cpp
controllers/db_alpha/walking_neural_control/real/: PDcontroller.cpp  PDcontroller.h  dungBeetleController.cpp  dungBeetleController.h  mainTestController.cpp  main_hexapod_controller.cpp  realRos2Class.cpp  realRos2Class.h  realRosClass.cpp  realRosClass.h
controllers/db_alpha/walking_neural_control/sim/: alphaMotorDefinition.h  dbModularController.cpp  dbModularController.h  dbalpha_controller.cpp  dbalpha_controller.h  main_dbalpha_controller.cpp  simRos2Class.cpp  simRos2Class.h  simRosClass.cpp  simRosClass.h
controllers/db_alpha/walking_neural_control/sim/utils/: AMC.cpp  AMC.h  db_pcpg.cpp  db_psn.cpp  dln.cpp  dln.h  grabcpg.cpp  grabcpg.h
projects/db_alpha/walking_neural_control/: README.md
projects/db_alpha/walking_neural_control/sim/: dbAlpha.lua  dbAlpha_loco.lua
projects/db_alpha/walking_neural_control/sim/ros2_ws/install/: local_setup.sh  setup.sh
projects/db_alpha/walking_neural_control/sim/ros2_ws/install/walking_neural_controller_sim/share/walking_neural_controller_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
projects/db_alpha/walking_neural_control/sim/ros2_ws/install/walking_neural_controller_sim/share/walking_neural_controller_sim/cmake/: walking_neural_controller_simConfig.cmake
projects/db_alpha/walking_neural_control/sim/ros2_ws/install/walking_neural_controller_sim/share/walking_neural_controller_sim/launch/: walking_neural_control_sim.launch
projects/db_alpha/walking_neural_control/sim/ros2_ws/log/: latest_build
projects/db_alpha/walking_neural_control/sim/ros2_ws/src/walking_neural_controller_sim/: CMakeLists.txt
utils/vaam-II-library/: AdaptiveMotorController.cpp  AdaptiveMotorController.h  Matrix.cpp  Matrix.h
